Deprecated method
Corrected the deprecated constructor for Integer.